CHANGE TYPE OF "plates" from ArrayList<Tile>[] to ArrayList<ArrayList<Tile>>. add Random object, small fixes  in Table Class.